[package]
name = "winit_input_helper_temp"
repository = "https://github.com/emmabritton/winit_input_helper"
version = "0.14.2"
edition = "2021"
authors = ["Rukai <rubickent@gmail.com>", "Emma Britton <emmabritton@pm.me>"]
license = "MIT"

[dependencies]
winit = { version = "0.28", default-features = false }

[dev-dependencies]
winit = { version = "0.28" }

[package.metadata.docs.rs]
features = ["winit/default"]
